# LinearAlgebraKernels

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakelists.GpuAcceleration.txt.in  CMakelists.NoGpuAcceleration.txt.in
dev/: CMakeLists.txt
dev/include/LinearAlgebra/: Matrix.hpp  Operations.hpp  Operations_Device.hpp
dev/include/Orthogonalizations/: Cholesky.hpp  Householder.hpp  MGS.hpp  OrthogonalizationCommon.hpp
dev/include/ProjectionSubspace/: DavidsonSubspace.hpp  Subspace.hpp
dev/src/Orthogonalizations/: Cholesky.tcc  Householder.tcc  MGS.tcc
dev/src/ProjectionSubspace/: DavidsonSubspace.tcc  Subspace.tcc
dev/tests/: CMakeLists.txt
dev/tests/Orthogonalizations/: CMakeLists.txt  TestCholesky.cpp  TestCholesky.cu  TestHouseholder.cpp  TestHouseholder.cu  TestMGS.cpp  TestMGS.cu
dev/tests/ProjectionSubspace/: CMakeLists.txt  TestDavidsonSubspace.cpp  TestSubspace.cpp
